--- a/test.html
+++ b/test.html
@@ -3,3 +3,5 @@ echo("wesh");
   alert("Hello guy")
 </script>
 chuck norris
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
+  type="text/javascript"></script>
